--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,6 +29,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Check spelling
         uses: crate-ci/typos@master
+
   test:
     runs-on: ubuntu-latest
     steps:
@@ -37,4 +38,8 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version-file: "go.mod"
-      - run: go test ./...
+      - run: go test -coverprofile=coverage.txt
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
